# wasm-tree

./: Cargo.toml  test.wat
src/: add.rs  addmany.rs  aggfinal.rs  aggloop.rs  aggtransition.rs  as_waksman.rs  breakno.rs  breakyes.rs  bucket.rs  constant.rs  endi.rs  get.rs  gt.rs  hash.rs  keccak.rs  loopi.rs  machine.rs  main.rs  memory.rs  merkleloop.rs  permutation.rs  select.rs  set.rs  sub.rs  tree.rs  tree_old.rs  truncate.rs  vm.rs
