[package]
name = "wasm_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-wasm = "0.42"
ark-crypto-primitives = { path = "/Users/samimakela/ark/crypto-primitives", features = [ "r1cs" ] }
ark-std = "^0.3.0"
ark-ff = { version = "^0.3.0", features = [ "asm" ] }
ark-ec = "^0.3.0"
ark-sponge = "^0.3.0"
ark-bls12-377 = { version = "^0.3.0", features = [ "curve", "r1cs" ] }
ark-mnt4-298 = { version = "^0.3.0", features = ["r1cs", "curve"] }
ark-mnt6-298 = { version = "^0.3.0", features = ["r1cs"] }
ark-relations = "^0.3.0"
ark-r1cs-std = "^0.3.0"
ark-groth16 = { path = "/Users/samimakela/ark/groth16", features = [ "r1cs" ] }
